# A_MAZE_IN

./: Makefile  a_maze_ing.py  animation.py  config.txt  maze.txt  maze.txt=  pyproject.toml
mazegen/: __init__.py  maze_generator.py
